Preserve Service Worker fetch priorities

This CL preserves the priorities of requests that go through a
Service Worker's onfetch event and are fetch()ed from there. Before this CL,
these priorities were lost and re-generated later in
ResourceFetcher::ComputeLoadPriority with the priority we naturally assign
fetch()es (kHigh). This meant that requests for things like render-blocking
CSS were downgraded from kVeryHigh => kHigh, possibly causing loading regressions.

After this CL, the priorities of these requests are preserved and communicated to
the ResourceRequest for the corresponding fetch().
ResourceFetcher::ComputeLoadPriority is still entered, and takes the maximum of
the following two priorities:
  - The one we would naturally generate (kHigh, due to fetch())
  - The one _already on_ the ResourceRequest.

This fixes priority regressions from kVeryHigh => kHigh, however what it does
not do is stop desired low-priority requests from being upgraded to kHigh. For
example, if a SW's onfetch event.request is for an image, with kLow priority,
ResourceFetcher::ComputeLoadPriority will "upgrade" this request to kHigh. This
is probably undesirable, and will need a follow-up CL.

R=kinuko@chromium.org, kouhei@chromium.org, yhirano@chromium.org, yoav@yoav.ws

Bug: 872776
Change-Id: Iaa6b5420b65bc6004b5b7a2d1f8d0eb5453df872
Reviewed-on: https://chromium-review.googlesource.com/1192353
Commit-Queue: Dominic Farolino <domfarolino@gmail.com>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587457}
Former-commit-id: f141070af9bec5def36d4ca51e2f6c45451875fa